--- a/Week 7/Possession2.ipynb
+++ b/Week 7/Possession2.ipynb
@@ -196,14 +196,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "757d34c5-6485-4faf-add0-b6e912096fb6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TEST SENTENCES\n",
     "sentences = [\n",
-    "    \"All predators inflicted significant mortality on the prey at each prey density compared to the predator-free control for that density\",\n",
+    "    \"significant diet shifts from grass to herbs\",\n",
+    "    # \"All predators inflicted significant mortality on the prey at each prey density compared to the predator-free control for that density\",\n",
     "    # \"The dog, whose tail wagged excitedly, was greeted warmly by his owner.\",\n",
     "    # \"Because the children's toys were scattered everywhere, their mother asked them to tidy up.\",\n",
     "    # \"While I was at my friend's house, I saw his collection of vintage cars.\",\n",
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f8633f98-cecc-448b-86f7-eaf2212206d1",
    "metadata": {},
    "outputs": [
@@ -229,23 +230,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<spacy.matcher.dependencymatcher.DependencyMatcher object at 0x00000136AA13E110>\n",
-      "Sentence: All predators inflicted significant mortality on the prey at each prey density compared to the predator-free control for that density\n",
+      "<spacy.matcher.dependencymatcher.DependencyMatcher object at 0x0000022A8E05A3B0>\n",
+      "Sentence: significant diet shifts from grass to herbs\n",
       "\tMatch 14621589392117008497 - Pattern 2\n",
-      "\t\towned: mortality\n",
-      "\t\tadp: on\n",
-      "\t\towner: prey\n",
+      "\t\towned: shifts\n",
+      "\t\tadp: from\n",
+      "\t\towner: grass\n",
       "\n",
       "\tMatch 14621589392117008497 - Pattern 2\n",
-      "\t\towned: control\n",
-      "\t\tadp: for\n",
-      "\t\towner: density\n",
-      "\n",
-      "\tMatch 17237321022846380202 - Pattern 4\n",
-      "\t\tverb: inflicted\n",
-      "\t\towned: predators\n",
-      "\t\tadp: at\n",
-      "\t\towner: density\n",
+      "\t\towned: shifts\n",
+      "\t\tadp: to\n",
+      "\t\towner: herbs\n",
       "\n",
       "\n"
      ]
