--- a/Week 9/Chunk.ipynb
+++ b/Week 9/Chunk.ipynb
@@ -27,105 +27,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "958f7a62-fc83-4479-95a9-979086de3ed4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sp_nlp = spacy.load(\"en_core_web_sm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "fc509364-107e-40cb-be59-5d40b66a8063",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The ()\n",
-      "MANOVA ()\n",
-      "on ()\n",
-      "the ()\n",
-      "cattle ()\n",
-      "tank ()\n",
-      "experiment ()\n",
-      "showed ()\n",
-      "that ()\n",
-      "the ()\n",
-      "presence (tadpoles,)\n",
-      "of ()\n",
-      "Tramea (Anax,)\n",
-      ", ()\n",
-      "nonlethal ()\n",
-      "Anax (Tramea,)\n",
-      ", ()\n",
-      "and ()\n",
-      "large ()\n",
-      "bullfrog ()\n",
-      "tadpoles (presence,)\n",
-      "all ()\n",
-      "had ()\n",
-      "significant ()\n",
-      "effects ()\n",
-      "on ()\n",
-      "both ()\n",
-      "small ()\n",
-      "tadpole ()\n",
-      "species ()\n",
-      "( ()\n",
-      "Table ()\n",
-      "1 ()\n",
-      ") ()\n",
-      ". ()\n"
+      "C:\\Users\\lbeln\\anaconda3\\envs\\3.10\\lib\\site-packages\\thinc\\shims\\pytorch.py:253: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model.load_state_dict(torch.load(filelike, map_location=device))\n"
      ]
     }
    ],
    "source": [
-    "# def is_split_token(token, prev_token, next_token):\n",
-    "#     # if next_token and next_token.pos_ == \"VERB\":\n",
-    "#     # #     return \"KEEP_LEFT\"\n",
-    "#     # if token.pos_ == \"VERB\" and prev_token.pos_ != \"PUNCT\" and next_token.pos_ != \"PUNCT\":\n",
-    "#     #     return \"SPLIT_PREV\"\n",
-    "#     # if token.lower_ == \"to\" and next_token.pos_ in [\"VERB\", \"PROPN\"]:\n",
-    "#     #     return \"SPLIT_LEFT\"\n",
-    "#     # if token.lower_ == \"which\":\n",
-    "#     #     return True\n",
-    "#     if token.pos_ == \"CCONJ\" and token.head.pos_ not in [\"NOUN\", \"ADP\", \"ADJ\"]:\n",
-    "#         return \"SPLIT\"\n",
-    "#     if token.pos_ == \"ADP\" and next_token and next_token.pos_ in [\"NOUN\", \"PROPN\", \"DET\", \"ADJ\"]:\n",
-    "#         return False\n",
-    "#     if token.pos_ in [\"SCONJ\", \"DET\", \"AUX\", \"ADP\"] and token.lower_ not in [\"the\", \"of\", \"to\", \"a\", \"an\"]:\n",
-    "#         return \"SPLIT\"\n",
-    "#     return False\n",
-    "\n",
-    "# def split_sentence(tokens):\n",
-    "#     parts = []\n",
-    "\n",
-    "#     i = 0\n",
-    "#     number_tokens = len(tokens)\n",
-    "#     for token in tokens:\n",
-    "#         # print(f\"{token}: {token.pos_}\")\n",
-    "#         prev_token = None if token.i == 0 else tokens[token.i-1]\n",
-    "#         next_token = None if token.i == number_tokens - 1 else tokens[token.i+1]\n",
-    "#         split = is_split_token(token, prev_token, next_token)\n",
-    "#         if split == \"SPLIT\":\n",
-    "#             parts.append(tokens[i:token.i])\n",
-    "#             parts.append(tokens[token.i])\n",
-    "#             i = token.i + 1\n",
-    "#         elif split == \"SPLIT_PREV\":\n",
-    "#             parts.append(tokens[i:token.i])\n",
-    "#             i = token.i\n",
-    "#         elif split == \"SPLIT_PREV\":\n",
-    "#             parts.append(tokens[i:token.i-1])\n",
-    "#             i = token.i\n",
-    "#     if i != number_tokens:\n",
-    "#         parts.append(tokens[i:])\n",
-    "\n",
-    "#     parts = list(filter(lambda p: len(p.text) != 0, parts))\n",
-    "#     return parts\n",
+    "sp_nlp = spacy.load(\"en_core_web_trf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fc509364-107e-40cb-be59-5d40b66a8063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spacy import displacy\n",
     "\n",
     "def get_list(token, tokens, max_i=None):\n",
     "    max_i = len(tokens) - 1 if not max_i else max_i\n",
@@ -135,35 +61,47 @@
     "    if token.nbor().text != \",\":\n",
     "        return None\n",
     "\n",
+    "    and_or_found = False\n",
     "    conjunction_found = False\n",
     "    offset_at_last_comma = -1\n",
     "    number_commas_found = 0\n",
     "    \n",
     "    offset = 1\n",
     "    while token.i + offset <= max_i:\n",
+    "        print(f\"Offset: {offset}\")\n",
+    "        print(f\"Offset At Last Comma: {offset_at_last_comma}\")\n",
     "        nbor = token.nbor(offset)\n",
     "        if nbor.text == \",\":\n",
     "            # STOP\n",
     "            if nbor.head.i > nbor.i:\n",
+    "                print(f\"Offset: {offset}\")\n",
+    "                print(1, nbor, nbor.head)\n",
     "                break\n",
     "            offset_at_last_comma = offset\n",
     "            number_commas_found += 1\n",
     "            offset += 1\n",
     "            continue\n",
-    "        if nbor.pos_ in [\"ADJ\", \"NOUN\", \"PROPN\"] or nbor.text in [\"-\", \"/\"]:\n",
+    "        if nbor.pos_ in [\"ADJ\", \"NOUN\", \"PROPN\", \"PRON\"] or nbor.lower_ in [\"-\", \"/\"]:\n",
+    "            print(2, nbor)\n",
     "            offset += 1\n",
     "            continue\n",
     "        if nbor.pos_ == \"CCONJ\" and nbor.lower_ not in [\"but\"]:\n",
+    "            print(3, nbor)\n",
     "            if nbor.lower_ in [\"and\", \"or\"]:\n",
-    "                if conjunction_found:\n",
+    "                print(4, nbor)\n",
+    "                if and_or_found:\n",
+    "                    print(5, nbor)\n",
     "                    break\n",
-    "                elif number_commas_found == 1:\n",
+    "                elif number_commas_found == 1 and not conjunction_found and offset_at_last_comma == offset + 1:\n",
+    "                    print(6, nbor)\n",
     "                    offset = offset_at_last_comma - 1\n",
     "                    break\n",
-    "                conjunction_found = True\n",
+    "                and_or_found = True\n",
+    "            conjunction_found = True\n",
     "            offset += 1\n",
     "            continue\n",
     "        break\n",
+    "    print(f\"Offset: {offset}\")\n",
     "    if offset <= 2:\n",
     "        return None\n",
     "    return tokens[token.i:token.i+offset]\n",
@@ -187,22 +125,30 @@
     "    # \"All predators inflicted significant mortality on the prey at each prey density compared to the predator-free control for that density\",\n",
     "    # \"Our results show that an increase in sediment organic matter content is associated to a decline in the abundance of Loripes lucinalis (lucinid bivalve) in the Cymodocea nodosa meadows studied, which potentially may weaken the mutualism between the two species.\",\n",
     "    # \"The abundance of lucinids showed a negative correlation with the organic matter content in vegetated sediments (Fig. 3a), but showed no correlation in bare ones (Fig. 3b).\",\n",
-    "    \"The MANOVA on the cattle tank experiment showed that the presence of Tramea, nonlethal Anax, and large bullfrog tadpoles all had significant effects on both small tadpole species (Table 1).\",\n",
+    "    # \"The MANOVA on the cattle tank experiment showed that the presence of Tramea, nonlethal Anax, and large bullfrog tadpoles all had significant effects on both small tadpole species (Table 1).\",\n",
     "    # \"Thus the presence of predators, both nonlethal Anax and lethal Tramea, modified the tank environment in a way that facilitated invasion by midges, but only in the absence of large bullfrogs.\",\n",
     "    # \"We hypothesized that the presence of Anax would decrease foraging activity of small tadpoles, which in turn would decrease predation by Tramea on the small tadpoles\",\n",
     "    # \"The stranger hit a bystander, the man hit a stranger\",\n",
-    "    # \"Presence of large bullfrog competitors increased the predation rate of Trameaon small green frogs and small bullfrogs.\"\n",
+    "    # \"Presence of large bullfrog competitors increased the predation rate of Trameaon small green frogs and small bullfrogs.\",\n",
+    "    # \"Thus the presence of predators, both nonlethal Anax and lethal Tramea, ate good.\",\n",
+    "    # \"Thus the presence of predators, both nonlethal Anax and lethal Tramea, modified the tank environment in a way that facilitated invasion by midges, but only in the absence of large bullfrogs.\",\n",
+    "    # \"Pea aphids (Acyrthosiphon pisum, Harris) have been shown to produce winged dispersal morphs in response to the presence of ladybirds or parasitoid natural enemies.\",\n",
+    "    \"The results presented here clearly demonstrate that the presence of both lacewing larvae and hoverfly larvae can induce pea aphids to produce a higher proportion of winged offspring.\"\n",
     "]\n",
+    "\n",
+    "text = texts[-1]\n",
+    "sp_doc = sp_nlp(text)\n",
+    "# displacy.render(sp_doc, style=\"dep\", jupyter=True, options={\"collapse_punct\": False})\n",
     "\n",
     "for text in texts:\n",
     "    sp_doc = sp_nlp(text)\n",
     "    for token in sp_doc:\n",
-    "        print(token, token.conjuncts)\n",
-    "        # token_list = get_list(token, sp_doc)\n",
-    "        # if token_list:\n",
-    "        #     print(token)\n",
-    "        #     print(token_list)\n",
-    "        #     print()\n",
+    "        # print(token, token.conjuncts)\n",
+    "        token_list = get_list(token, sp_doc)\n",
+    "        if token_list:\n",
+    "            print(token)\n",
+    "            print(token_list)\n",
+    "            print()\n",
     "        \n",
     "    # parts = split_sentence(sp_doc)\n",
     "    # for part in parts:\n",
