--- a/Week 11/Parser.ipynb
+++ b/Week 11/Parser.ipynb
@@ -387,7 +387,7 @@
     "        self.unit_keywords = [self.main.lg_nlp(literal) for literal in self.unit_literals]\n",
     "        self.unit_indices = []\n",
     "        # Quantitative\n",
-    "        self.quantitative_literals = {\"tenfold\", \"half\", \"double\", \"triple\", \"quadruple\", \"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", \"nine\", \"ten\"}\n",
+    "        self.quantitative_literals = {\"tenfold\", \"half\", \"double\", \"triple\", \"quadruple\", \"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", \"nine\", \"ten\", \"higher\", \"lower\"}\n",
     "        self.quantitative_keywords = [self.main.lg_nlp(literal) for literal in self.quantitative_literals]\n",
     "        self.quantitative_indices = []\n",
     "        # Change\n",
@@ -1120,11 +1120,11 @@
      "text": [
       "C:\\Users\\lbeln\\anaconda3\\envs\\3.10\\lib\\site-packages\\thinc\\shims\\pytorch.py:253: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model.load_state_dict(torch.load(filelike, map_location=device))\n",
-      "05/05/2025 22:13:20 - INFO - \t missing_keys: []\n",
-      "05/05/2025 22:13:20 - INFO - \t unexpected_keys: []\n",
-      "05/05/2025 22:13:20 - INFO - \t mismatched_keys: []\n",
-      "05/05/2025 22:13:20 - INFO - \t error_msgs: []\n",
-      "05/05/2025 22:13:20 - INFO - \t Model Parameters: 90.5M, Transformer: 82.1M, Coref head: 8.4M\n"
+      "05/05/2025 22:18:04 - INFO - \t missing_keys: []\n",
+      "05/05/2025 22:18:04 - INFO - \t unexpected_keys: []\n",
+      "05/05/2025 22:18:04 - INFO - \t mismatched_keys: []\n",
+      "05/05/2025 22:18:04 - INFO - \t error_msgs: []\n",
+      "05/05/2025 22:18:04 - INFO - \t Model Parameters: 90.5M, Transformer: 82.1M, Coref head: 8.4M\n"
      ]
     }
    ],
@@ -1155,15 +1155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "70aada39-4c77-4877-b6be-6f25d4e1c9d5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "889 889 1379\n"
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -1201,6 +1203,7 @@
     "urls = []\n",
     "number_urls = 0\n",
     "\n",
+    "# Combinations, Cross Product\n",
     "keywords = [\"higher-order interactions\", \"trait-mediated interaction modification\", \"trait-mediated interaction\", \"polymorphism\", \"apparent competition\", \"resource competition\", \"keystone predation\", \"intraguild predation\", \"intransitive competition\", \"trophic chains\", \"competition chains\", \"mutual competition\"]\n",
     "pager = Works().search_filter(title=keywords[0]).paginate(per_page=200)\n",
     "number_works = 0\n",
@@ -1208,27 +1211,29 @@
     "\n",
     "texts = []\n",
     "\n",
-    "for page in pager:\n",
-    "    for work in page:\n",
-    "        number_unfiltered_works += 1\n",
-    "        \n",
-    "        title = work['title']\n",
-    "        abstract = work['abstract']\n",
-    "        \n",
-    "        # Find Full Text\n",
-    "        url = None\n",
-    "        if work[\"primary_location\"]:\n",
-    "            url = work[\"primary_location\"][\"pdf_url\"]\n",
-    "            if url:\n",
-    "                urls.append(url)\n",
-    "        full_text = \"\" if not url else pdf_to_text(url)\n",
-    "        \n",
-    "        if not abstract and not full_text:\n",
-    "            continue\n",
-    "        texts.append((title, abstract if abstract and not full_text else full_text))\n",
-    "        number_works += 1\n",
-    "    if number_works >= 10000:\n",
-    "        break\n",
+    "for keyword in keywords:\n",
+    "    pager = Works().search_filter(title=keyword).paginate(per_page=200)\n",
+    "    for page in pager:\n",
+    "        for work in page:\n",
+    "            number_unfiltered_works += 1\n",
+    "            \n",
+    "            title = work['title']\n",
+    "            abstract = work['abstract']\n",
+    "            \n",
+    "            # Find Full Text\n",
+    "            url = None\n",
+    "            if work[\"primary_location\"]:\n",
+    "                url = work[\"primary_location\"][\"pdf_url\"]\n",
+    "                if url:\n",
+    "                    urls.append(url)\n",
+    "            full_text = \"\" if not url else pdf_to_text(url)\n",
+    "            \n",
+    "            if not abstract and not full_text:\n",
+    "                continue\n",
+    "            texts.append((title, abstract if abstract and not full_text else full_text))\n",
+    "            number_works += 1\n",
+    "        if number_works >= 10000:\n",
+    "            break\n",
     "\n",
     "print(len(texts), number_works, number_unfiltered_works)"
    ]
@@ -1238,63 +1243,7 @@
    "execution_count": null,
    "id": "075d9863-ad69-4c97-8ae2-6fc46d2c8e4c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/889\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "05/05/2025 22:14:09 - INFO - \t Tokenize 1 inputs...\n",
-      "Map: 100%|██████████| 1/1 [00:00<00:00, 11.12 examples/s]\n",
-      "05/05/2025 22:14:10 - INFO - \t ***** Running Inference on 1 texts *****\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2/889\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "05/05/2025 22:14:31 - INFO - \t Tokenize 1 inputs...\n",
-      "Map: 100%|██████████| 1/1 [00:00<00:00, 37.45 examples/s]\n",
-      "05/05/2025 22:14:31 - INFO - \t ***** Running Inference on 1 texts *****\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3/889\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "05/05/2025 22:15:16 - INFO - \t Tokenize 1 inputs...\n",
-      "Map: 100%|██████████| 1/1 [00:00<00:00, 21.01 examples/s]\n",
-      "05/05/2025 22:15:16 - INFO - \t ***** Running Inference on 1 texts *****\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4/889\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "random.shuffle(texts)\n",
@@ -1315,7 +1264,6 @@
     "        for unit in units:\n",
     "            if unit.get_score() == 4:\n",
     "                valid_texts.append((title, unit))\n",
-    "                print\n",
     "                break\n",
     "    except Exception as e:\n",
     "        print(e)\n",
@@ -1324,8 +1272,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "971d39ef-9b21-4ffd-8f38-150c45980729",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(valid_texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "4b080e64-a589-4ee9-9244-f00d899e6fd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Direct and higher‐order interactions in plant communities under increasing weather persistence\n",
+      "Species: {species, interactions}, Trait: {role}, Cause: (Species: set(), Trait: {conditions}, Cause: (set()), Change: set()), Change: {destabilize}\n",
+      "\n",
+      "HOM (higher order mode) losses at the IR (interaction region) of the B-factory\n",
+      "Species: {s}, Trait: {heating}, Cause: ({beam, the, wall, in, pipe}), Change: {producing}\n",
+      "\n",
+      "Multitrophic higher-order interactions modulate species persistence\n",
+      "Species: {plant, species}, Trait: {interactions}, Cause: (Species: set(), Trait: {HOIs}, Cause: (set()), Change: set()), Change: {produced}\n",
+      "\n",
+      "Bias-Variance Trade-Off in Hierarchical Probabilistic Models Using Higher-Order Feature Interactions\n",
+      "Species: {variance, trade, off, bias}, Trait: {complexity}, Cause: (Species: set(), Trait: {number}, Cause: ({that}), Change: {increasing}), Change: {increases}\n",
+      "\n",
+      "Competition Between Aquatic Insects and Vertebrates: Interaction Strength and Higher Order Interactions\n",
+      "Species: {Insects}, Trait: {mass}, Cause: ({that, both, anurans}), Change: {reduced}\n",
+      "\n",
+      "The Telomere Capping Complex CST Has an Unusual Stoichiometry, Makes Multipartite Interaction with G-Tails, and Unfolds Higher-Order G-Tail Structures\n",
+      "Species: {domain, albicans, fold, Candida, OB, Stn1}, Trait: {surface, DNA}, Cause: ({the, DNA, that}), Change: {caused, reduction}\n",
+      "\n",
+      "VERTEBRATES: INTERACTION STRENGTH AND HIGHER ORDER INTERACTIONS1\n",
+      "Species: {Insects}, Trait: {mass}, Cause: ({that, both, anurans}), Change: {reduced}\n",
+      "\n",
+      "The role of higher-order biotic interactions on tropical tree growth\n",
+      "Species: {species, most}, Trait: {diameter, growth, rates}, Cause: ({what, had, beyond, interactions, direct, already}), Change: {reduced, reduce}\n",
+      "\n",
+      "Higher order genes interaction in DNA repair and cytokine genes polymorphism and risk to lung cancer in North Indians\n",
+      "Species: {lung}, Trait: {risk}, Cause: ({that, terminal, nodes, which}), Change: {increased}\n",
+      "\n",
+      "Higher order scaffoldin assembly in Ruminococcus flavefaciens cellulosome is coordinated by a discrete cohesin-dockerin interaction\n",
+      "Species: {Ruminococcus, flavefaciens}, Trait: {cellulosome, complexity}, Cause: ({as}), Change: {increasing}\n",
+      "\n",
+      "Bivalve Growth and Higher Order Interactions: Importance of Density, Site, and Time\n",
+      "Species: {Mercenaria, growth}, Trait: {mixing}, Cause: ({roughness, of, because, hydrodynamics}), Change: {increased}\n",
+      "\n",
+      "Experimental evidence for nature's hidden network of higher-order interactions\n",
+      "Species: {distinct}, Trait: {densities}, Cause: (Species: set(), Trait: set(), Cause: (Species: set(), Trait: set(), Cause: ({network, interactions, multiple, a, how, within}), Change: set()), Change: {changed}), Change: {reducing}\n",
+      "\n",
+      "Connecting higher order interactions with ecological stability in experimental aquatic food webs\n",
+      "Species: {more, species, third}, Trait: {interaction}, Cause: ({the, a, when, of, presence, third}), Change: {changes}\n",
+      "\n",
+      "Higher-Order Simulations of Interactional Aerodynamics on Full Helicopter Configurations Using a Hamiltonian Strand Approach\n",
+      "Species: {flight, forward, medium, speed, case}, Trait: {conditions}, Cause: ({of, an, at, ratio, advance, μ}), Change: {reproduced}\n",
+      "\n",
+      "Intraspecific variation promotes species coexistence and trait clustering through higher order interactions\n",
+      "Species: {species, coexistence}, Trait: {divergence, trait}, Cause: ({that, individual, variation, can}), Change: {reducing}\n",
+      "\n",
+      "Higher Order Calcium-Dependent Protein Kinases (CPKs) Mutant Lines Elucidate Roles of CPKs within Abscisic Acid Signal Transduction in Arabidopsis and In Vivo Interactions of Calcium-Dependent Protein Kinases, CPK6 and CPK23, with PP2C Protein Phosphatases within Abscisic Acid Signaling\n",
+      "Species: {plants}, Trait: {fitness}, Cause: (Species: set(), Trait: {abscisic, acid, stress-, phytohormone}, Cause: (set()), Change: set()), Change: {reduces}\n",
+      "\n",
+      "Experimental evidence for nature's hidden network of higher-order interactions\n",
+      "Species: {distinct}, Trait: {densities}, Cause: (Species: set(), Trait: set(), Cause: (Species: set(), Trait: set(), Cause: ({how, within, interactions, network, a, multiple}), Change: set()), Change: {changed}), Change: {reducing}\n",
+      "\n",
+      "Direct and higher-order interactions in plant communities under increasing weather persistence\n",
+      "Species: {interactions, species}, Trait: {role}, Cause: (Species: set(), Trait: {conditions}, Cause: (set()), Change: set()), Change: {destabilize}\n",
+      "\n",
+      "Experimental evidence for nature's hidden network of higher-order interactions\n",
+      "Species: {distinct}, Trait: {densities}, Cause: (Species: set(), Trait: set(), Cause: (Species: set(), Trait: set(), Cause: ({interactions, network, multiple, a, within, how}), Change: set()), Change: {changed}), Change: {reducing}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in valid_texts:\n",
+    "    print(t[0])\n",
+    "    print(t[1])\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "090fa01e-e6f0-44a1-90f7-c429ccc9ced9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "889\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(text_i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "18d6e09b-890b-49fe-befe-f77449753074",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "90305f73-c979-4ba2-9a2d-35f0671e3043",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('texts.pickle', 'wb') as file:\n",
+    "#     pickle.dump(texts, file)\n",
+    "\n",
+    "# with open('valid_texts.pickle', 'wb') as file:\n",
+    "#     pickle.dump([t[0] for t in valid_texts], file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2a2aa2e1-afda-40b5-ae53-9f9ae19bfdad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Direct and higher‐order interactions in plant communities under increasing weather persistence\n",
+      "HOM (higher order mode) losses at the IR (interaction region) of the B-factory\n",
+      "Multitrophic higher-order interactions modulate species persistence\n",
+      "Bias-Variance Trade-Off in Hierarchical Probabilistic Models Using Higher-Order Feature Interactions\n",
+      "Competition Between Aquatic Insects and Vertebrates: Interaction Strength and Higher Order Interactions\n",
+      "The Telomere Capping Complex CST Has an Unusual Stoichiometry, Makes Multipartite Interaction with G-Tails, and Unfolds Higher-Order G-Tail Structures\n",
+      "VERTEBRATES: INTERACTION STRENGTH AND HIGHER ORDER INTERACTIONS1\n",
+      "The role of higher-order biotic interactions on tropical tree growth\n",
+      "Higher order genes interaction in DNA repair and cytokine genes polymorphism and risk to lung cancer in North Indians\n",
+      "Higher order scaffoldin assembly in Ruminococcus flavefaciens cellulosome is coordinated by a discrete cohesin-dockerin interaction\n",
+      "Bivalve Growth and Higher Order Interactions: Importance of Density, Site, and Time\n",
+      "Experimental evidence for nature's hidden network of higher-order interactions\n",
+      "Connecting higher order interactions with ecological stability in experimental aquatic food webs\n",
+      "Higher-Order Simulations of Interactional Aerodynamics on Full Helicopter Configurations Using a Hamiltonian Strand Approach\n",
+      "Intraspecific variation promotes species coexistence and trait clustering through higher order interactions\n",
+      "Higher Order Calcium-Dependent Protein Kinases (CPKs) Mutant Lines Elucidate Roles of CPKs within Abscisic Acid Signal Transduction in Arabidopsis and In Vivo Interactions of Calcium-Dependent Protein Kinases, CPK6 and CPK23, with PP2C Protein Phosphatases within Abscisic Acid Signaling\n",
+      "Experimental evidence for nature's hidden network of higher-order interactions\n",
+      "Direct and higher-order interactions in plant communities under increasing weather persistence\n",
+      "Experimental evidence for nature's hidden network of higher-order interactions\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# with open(\"valid_texts.pickle\", 'rb') as file:\n",
+    "#     data = pickle.load(file)\n",
+    "#     print(data)\n",
+    "\n",
+    "for thing in data:\n",
+    "    print(thing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ad1e3c1-d16c-4348-a346-d9721487c613",
    "metadata": {},
    "outputs": [],
    "source": []
