scared, frightened even

--- a/Week 16/Methods/Points/Points_2.ipynb
+++ b/Week 16/Methods/Points/Points_2.ipynb
@@ -753,16 +753,25 @@
     "        sp_b_text = sp_b.text.lower()\n",
     "        \n",
     "        for sp_a in sp_A:\n",
-    "            # Try Verbatim\n",
-    "            sp_a_text = sp.text.lower()\n",
+    "            # Verbatim Text\n",
+    "            sp_a_text = sp_a.text.lower()\n",
     "\n",
     "            if sp_a_text == sp_b_text:\n",
     "                return sp_a\n",
     "\n",
-    "            # Try Singular\n",
-    "            sp_a_singular_texts = self.main.help.singularize(sp_a)\n",
-    "            sp_b_singular_texts = self.main.help.singularize(sp_b)\n",
-    "            \n",
+    "            # Singularized Text\n",
+    "            sp_a_singular_texts = self.main.help.singularize(sp_a_text)\n",
+    "            sp_b_singular_texts = self.main.help.singularize(sp_b_text)\n",
+    "\n",
+    "            if set(sp_a_singular_texts).intersection(sp_b_singular_texts):\n",
+    "                return sp_a\n",
+    "\n",
+    "        # METHOD 2: Check Alternate Names\n",
+    "        for sp_a in sp_A:\n",
+    "            if sp_b_text in self.alternate_names.get(sp_a_text, []):\n",
+    "                return sp_a\n",
+    "            if sp_a_text in self.alternate_names\n",
+    "        \n",
     "        \n",
     "        if verbose:\n",
     "            print(\"Comparing Species\")\n",
