forgot how to spell nickel, nickle? no nickel. penny for your thoughts?

--- a/Week 24/Graph_2.ipynb
+++ b/Week 24/Graph_2.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "00b0bd8a-5d3a-4417-ad6b-1fc63e7dd50d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lbeln\\anaconda3\\envs\\3.10\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import csv\n",
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "955b168a-290b-4e8a-802c-933b67850019",
    "metadata": {},
    "outputs": [],
@@ -53,26 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "baa69741-6e0c-4719-ab00-126243626a63",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lbeln\\anaconda3\\envs\\3.10\\lib\\site-packages\\thinc\\shims\\pytorch.py:253: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(filelike, map_location=device))\n",
-      "C:\\Users\\lbeln\\anaconda3\\envs\\3.10\\lib\\site-packages\\thinc\\shims\\pytorch.py:114: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
-      "  with torch.cuda.amp.autocast(self._mixed_precision):\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\u001b[1mExample\u001b[0m\n",
-      "\u001b[0mAOL \u001b[0m\u001b[0mcaused \u001b[0m\u001b[0mGMAIL\u001b[0m\u001b[0m, \u001b[0m\u001b[0mYAHOO\u001b[0m\u001b[0m, \u001b[0m\u001b[0mand \u001b[0m\u001b[0mOUTLOOK \u001b[0m\u001b[0mto \u001b[0m\u001b[0mshut \u001b[0m\u001b[0mdown\u001b[0m\u001b[0m. \u001b[0m"
+      "\u001b[0mThe \u001b[0m\u001b[0mdog \u001b[0m\u001b[0mcaused \u001b[0m\u001b[0mthe \u001b[0m\u001b[0mcat \u001b[0m\u001b[0mto \u001b[0m\u001b[0mcry\u001b[0m\u001b[0m. \u001b[0m"
      ]
     }
    ],
@@ -84,7 +65,7 @@
     "# abstract = df.loc[i, \"Abstract\"]\n",
     "\n",
     "title = \"Example\"\n",
-    "abstract = \"AOL caused GMAIL, YAHOO, and OUTLOOK to shut down.\"\n",
+    "abstract = \"The dog caused the cat to cry.\"\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_trf\")\n",
     "doc = nlp(abstract)\n",
