--- a/Week 24/Untitled1.ipynb
+++ b/Week 24/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "5fc0047c-8045-4784-a3d2-1f8f0a7adefa",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f0b331f0-e6c5-4ec7-964b-8b57318d3e6e",
    "metadata": {},
    "outputs": [],
@@ -29,13 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "[[],\n",
-       " ['grounds', 'reason'],\n",
-       " ['campaign', 'crusade', 'drive', 'effort', 'movement'],\n",
-       " ['causal_agency', 'causal_agent'],\n",
-       " ['case', 'causa', 'lawsuit', 'suit'],\n",
-       " ['do', 'make'],\n",
-       " ['get', 'have', 'induce', 'make', 'stimulate']]"
+       "[['hence', 'so', 'thence', 'thus'], ['consequently']]"
       ]
      },
      "execution_count": 5,
@@ -44,7 +38,7 @@
     }
    ],
    "source": [
-    "wn.synonyms('cause')\n",
+    "wn.synonyms('therefore')\n",
     "# wn.synonyms('coche', lang='spa')"
    ]
   },
@@ -164,8 +158,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "497e557d-37a6-4529-88b4-769b5cb7a7e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[],\n",
+       " {1},\n",
+       " {1, 2},\n",
+       " {1, 2, 3},\n",
+       " {1, 2, 3, 4},\n",
+       " {1, 2, 3, 4, 5},\n",
+       " {1, 2, 3, 5},\n",
+       " {1, 2, 4},\n",
+       " {1, 2, 4, 5},\n",
+       " {1, 2, 5},\n",
+       " {1, 3},\n",
+       " {1, 3, 4},\n",
+       " {1, 3, 4, 5},\n",
+       " {1, 3, 5},\n",
+       " {1, 4},\n",
+       " {1, 4, 5},\n",
+       " {1, 5},\n",
+       " {2},\n",
+       " {2, 3},\n",
+       " {2, 3, 4},\n",
+       " {2, 3, 4, 5},\n",
+       " {2, 3, 5},\n",
+       " {2, 4},\n",
+       " {2, 4, 5},\n",
+       " {2, 5},\n",
+       " {3},\n",
+       " {3, 4},\n",
+       " {3, 4, 5},\n",
+       " {3, 5},\n",
+       " {4},\n",
+       " {4, 5},\n",
+       " {5}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def power_set(pool, current=None, result=None):\n",
+    "    if current not in result:\n",
+    "        result.append(current)\n",
+    "\n",
+    "    for item in pool:\n",
+    "        if item not in current:\n",
+    "            power_set(pool, current={*current, item}, result=result)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "power_set([1, 2, 3, 4, 5], current=[], result=[])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93852aa1-b5ec-451f-99ba-ddae5d2af82a",
    "metadata": {},
    "outputs": [],
    "source": []
