--- a/Week 24/Untitled1.ipynb
+++ b/Week 24/Untitled1.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "id": "4ba8db9a-851e-49b2-a901-948a8c88bd9c",
    "metadata": {},
    "outputs": [
@@ -73,15 +73,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.10526315789473684, 'purple', 'lavender')\n"
+      "(0.6, 'trait', 'temperature')\n"
      ]
     }
    ],
    "source": [
     "from nltk.corpus import wordnet\n",
     "\n",
-    "list1 = ['purple']\n",
-    "list2 = ['lavender']\n",
+    "list1 = ['trait']\n",
+    "list2 = ['temperature']\n",
     "list = []\n",
     "\n",
     "for word1 in list1:\n",
